<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".DashBoard">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        />
    <!-- Likes -->
    <TextView
        android:id="@+id/textLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/likes_0" />

    <!-- Comments -->
    <TextView
        android:id="@+id/textComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments_0" />

    <!-- Shares -->
    <TextView
        android:id="@+id/textShares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shares_0" />

    <Button
        android:id="@+id/btn_back_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_page" />

</LinearLayout>